--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "clean": "rm dist/bundle.js",
+    "clean": "rm -r dist .parcel-cache",
     "build-prod": "parcel build src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,14 +21,19 @@
   "homepage": "https://github.com/elemorelli/fuel-logger-web#readme",
   "dependencies": {
     "history": "^4.10.1",
+    "isomorphic-unfetch": "^3.1.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.5",
+    "@babel/core": "^7.12.7",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
     "parcel": "^2.0.0-nightly.453"
-  }
+  },
+  "browserslist": [
+    "since 2017-06"
+  ]
 }
