--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@babel/core": "^7.12.7",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
-    "parcel": "^2.0.0-nightly.460"
+    "parcel": "^2.0.0-nightly.460",
+    "sass": "^1.29.0"
   },
   "browserslist": [
     "since 2017-06"
